# docdex

./: .gitignore  .release-please-manifest.json  AGENT_PROMPT.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  glama.json  package-lock.json  package.json  release-please-config.json  server.js  server.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-dry-run.yml  release.yml
.well-known/: mcp.json
.well-known/mcp/: server-card.json
docs/: tui-error-taxonomy.md
npm/: CHANGELOG.md  LICENSE  README.md  package.json
npm/lib/: install.js  platform.js
src/: audit.rs  config.rs  daemon.rs  dag.rs  dag_tui.rs  llm.rs  main.rs  mcp.rs  util.rs  watcher.rs
src/index/: mod.rs
src/search/: mod.rs
tests/: mcp.rs  smoke.rs  web_rag.rs
