[package]
name = "docdexd"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tantivy = { version = "0.21", default-features = false, features = ["mmap", "lz4-compression"] }
walkdir = "2.5"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
zstd-sys = "=2.0.9"
ipnet = "2"
rustls-pemfile = "2"
tokio-rustls = "0.25"
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2", "service"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
tower = "0.4"
ammonia = "3"
nix = { version = "0.29", default-features = false, features = ["user", "sched", "fs"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
which = "6"

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
tempfile = "3.10"
